--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*"
+        "laravel/framework": "5.3.*",
+        "caouecs/laravel-lang": "~3.0",
+        "guzzlehttp/guzzle": "~6.0",
+        "laracasts/flash": "2.0.*",
+        "naux/sendcloud": "1.1.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
